--- a/index.html
+++ b/index.html
@@ -6,28 +6,47 @@
   <meta charset="utf-8">
   <title>Rock|Paper|Scissor</title>
   <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet"
+  href="https://cdn.jsdelivr.net/npm/animate.css@3.5.2/animate.min.css"
+  integrity="sha384-OHBBOqpYHNsIqQy8hL1U+8OXf9hH6QRxi0+EODezv82DfnZoV7qoHAZDwMwEJvSw"
+  crossorigin="anonymous">
   <script src="script.js"></script>
 </head>
 
 <body>
-  <div class="player-area">
-    <h1 id="player1Name">Player 1</h1>
-    <button onclick="player1.rock()">Rock [Z]</button>
-    <button onclick="player1.paper()">Paper [X]</button>
-    <button onclick="player1.scissor()">Scissor [C]</button>
+  <div class="flex-area">
+    <div class="player-area">
+      <div>
+        <h1 id="player1Name">Player 1</h1>
+        <button onclick="player1.rock()">Rock [Z]</button>
+        <button onclick="player1.paper()">Paper [X]</button>
+        <button onclick="player1.scissor()">Scissor [C]</button>
+      </div>
+    </div>
+    <div class="player-area">
+      <h1 id="player2Name">Player 2</h1>
+      <button onclick="player2.rock()">Rock [B]</button>
+      <button onclick="player2.paper()">Paper [N]</button>
+      <button onclick="player2.scissor()">Scissor [M]</button>
+    </div>
   </div>
-  <div class="player-area">
-    <h1 id="player2Name">Player 2</h1>
-    <button onclick="player2.rock()">Rock [B]</button>
-    <button onclick="player2.paper()">Paper [N]</button>
-    <button onclick="player2.scissor()">Scissor [M]</button>
-  </div>
-  <button class="playAgain"> Play Again [Space Bar]</button>
-  <div>
-    Player 1 choose: <span id="player1Choose"></span>
-  </div>
-  <div>
-    Player 2 choose: <span id="player2Choose"></span>
+  <div class="flex-area">
+    <div>
+      Player 1 choose:
+      <div class="img-container">
+        <img id="player1Choose"></img>
+      </div>
+    </div>
+    <div class="playAgain">
+      <div id="countdown"></div>
+      Play Again [Space Bar]
+    </div>
+    <div>
+      Player 2 choose: 
+      <div class="img-container">
+        <img id="player2Choose"></img>
+      </div>
+    </div>
   </div>
 
   
