--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <i class="fas fa-hand-scissors"></i>
       </div>
     </div>
-    <div id="countdown">Press Space to Start</div>
+    <div id="countdown" onclick="startGame()">Press Space to Start</div>
     <div class="player-area">
       <div>
         <div id="player2Choose" class="btn big"></div>
@@ -44,6 +44,9 @@
       <div class="btn" onclick="player2.chooseScissors()">
         <i class="fas fa-hand-scissors"></i>
       </div>
+    </div>
+    <div class="float btn">
+      <i class="fas fa-plus"></i>
     </div>
   </div>
   <script src="script.js"></script>
