display count and  icon

--- a/index.html
+++ b/index.html
@@ -18,7 +18,10 @@
   <div class="container">
     <div class="player-area">
       <div>
-        <div id="player1Choose" class="btn big"></div>
+        <div id="player1WinCount" class="big"></div>
+      </div>
+      <div>
+        <div id="player1Choose" class="btn big fas"></div>
       </div>
       <div class="btn" onclick="player1.chooseRock()">
         <i class="fas fa-hand-rock"></i>
@@ -33,7 +36,10 @@
     <div id="countdown" onclick="startGame()">Press Space to Start</div>
     <div class="player-area">
       <div>
-        <div id="player2Choose" class="btn big"></div>
+        <div id="player2WinCount" class="big"></div>
+      </div>
+      <div>
+        <div id="player2Choose" class="btn big fas"></div>
       </div>
       <div class="btn" onclick="player2.chooseRock()">
           <i class="fas fa-hand-rock"></i>
