--- a/index.html
+++ b/index.html
@@ -23,13 +23,13 @@
       <div>
         <div id="player1Choose" class="btn big fas"></div>
       </div>
-      <div class="btn" onclick="player1.chooseRock()">
+      <div class="btn" data-tooltip="Key: Z" onclick="player1.chooseRock()">
         <i class="fas fa-hand-rock"></i>
       </div>
-      <div class="btn" onclick="player1.choosePaper()">
+      <div class="btn" data-tooltip="Key: X" onclick="player1.choosePaper()">
           <i class="fas fa-hand-paper"></i>
       </div>
-      <div class="btn" onclick="player1.chooseScissors()">
+      <div class="btn" data-tooltip="Key: C" onclick="player1.chooseScissors()">
         <i class="fas fa-hand-scissors"></i>
       </div>
     </div>
@@ -41,13 +41,13 @@
       <div>
         <div id="player2Choose" class="btn big fas"></div>
       </div>
-      <div class="btn" onclick="player2.chooseRock()">
+      <div class="btn" data-tooltip="Key: B" onclick="player2.chooseRock()">
           <i class="fas fa-hand-rock"></i>
       </div>
-      <div class="btn" onclick="player2.choosePaper()">
+      <div class="btn" data-tooltip="Key: N" onclick="player2.choosePaper()">
           <i class="fas fa-hand-paper"></i>
       </div>
-      <div class="btn" onclick="player2.chooseScissors()">
+      <div class="btn" data-tooltip="Key: M" onclick="player2.chooseScissors()">
         <i class="fas fa-hand-scissors"></i>
       </div>
     </div>
