added version to style and js

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta charset="utf-8">
   <title>Rock|Paper|Scissor</title>
   <link rel="stylesheet" href="libs/fontawesome-all.min.css">
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="style.css?v0.1">
 
   <!-- Libraries -->
   <script src="libs/TweenMax.min.js"></script>
@@ -55,6 +55,6 @@
       <i class="fas fa-plus"></i>
     </div>
   </div>
-  <script src="script.js"></script>
+  <script src="script.js?v0.1"></script>
 </body>
 </html>
